# bumperbot

./: README.md  Useful Command  package_requirement.txt
bumperbot_bringup/: CMakeLists.txt  package.xml
bumperbot_bringup/launch/: real_robot.launch.py  real_robot_with_rviz.launch.py  simulated_robot.launch.py
bumperbot_controller/: CMakeLists.txt  package.xml
bumperbot_controller/bumperbot_controller/: noisy_controller.py  simple_controller.py  simple_diffdrive_differential_IK_controller.py  simple_diffdrive_differential_IK_odom_controller.py  simple_diffdrive_differential_IK_odom_msg_broadcast_controller.py  simple_diffdrive_differential_IK_odom_msg_controller.py
bumperbot_controller/config/: bumperbot_controllers.yaml
bumperbot_controller/include/bumperbot_controller/: noisy_controller.hpp  simple_controller.hpp  simple_diffdrive_differential_IK_controller.hpp  simple_diffdrive_differential_IK_odom_controller.hpp  simple_diffdrive_differential_IK_odom_msg_broadcast_controller.hpp  simple_diffdrive_differential_IK_odom_msg_controller.hpp
bumperbot_controller/launch/: define_simple_controller.launch.py  joystick_teleop.launch.py  noisy_controller.launch.py  simple_controller.launch.py  simple_diffdrive_controller.launch.py  simple_diffdrive_differential_IK_controller.launch.py  simple_diffdrive_differential_IK_odom_controller.launch.py  simple_diffdrive_differential_IK_odom_msg_broadcast_controller.launch.py  simple_diffdrive_differential_IK_odom_msg_controller.launch.py
bumperbot_controller/src/: noisy_controller.cpp  simple_controller.cpp  simple_diffdrive_differential_IK_controller.cpp  simple_diffdrive_differential_IK_odom_controller.cpp  simple_diffdrive_differential_IK_odom_msg_broadcast_controller.cpp  simple_diffdrive_differential_IK_odom_msg_controller.cpp
bumperbot_cpp_examples/: CMakeLists.txt  package.xml
bumperbot_cpp_examples/include/bumperbot_cpp_examples/: simple_tf_euler_to_quaternion.hpp  simple_tf_kinematics.hpp  simple_tf_kinematics_dynamic.hpp  simple_tf_listener.hpp
bumperbot_cpp_examples/src/: simple_lifecycle_node.cpp  simple_parameter.cpp  simple_publisher.cpp  simple_receiver.cpp  simple_service_client.cpp  simple_service_server.cpp  simple_subscriber.cpp  simple_tf_euler_to_quaternion.cpp  simple_tf_kinematics.cpp  simple_tf_kinematics_dynamic.cpp  simple_tf_listener.cpp  simple_transmitter.cpp
bumperbot_description/: CMakeLists.txt  package.xml
bumperbot_description/launch/: display.launch.py  gazebo.launch.py
bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro  bumperbot_ros2_control.xacro
bumperbot_firmware/: CMakeLists.txt  bumperbot_interface.xml  package.xml
bumperbot_firmware/bumperbot_firmware/: mpu6050_driver.py
bumperbot_firmware/include/bumperbot_firmware/: bumperbot_interface.hpp
bumperbot_firmware/launch/: hardware_interface.launch.py
bumperbot_firmware/src/: bumperbot_interface.cpp
bumperbot_localization/: CMakeLists.txt  package.xml
bumperbot_localization/bumperbot_localization/: imu_republisher.py  kalman_filter.py
bumperbot_localization/config/: ekf.yaml
bumperbot_localization/include/bumperbot_localization/: kalman_filter.hpp
bumperbot_localization/launch/: local_localization.launch.py
bumperbot_localization/rviz/: display.rviz
bumperbot_localization/src/: imu_republisher.cpp  kalman_filter.cpp
bumperbot_msgs/: CMakeLists.txt  package.xml
bumperbot_msgs/srv/: GetTransform.srv
bumperbot_py_examples/: package.xml  setup.py
bumperbot_py_examples/bumperbot_py_examples/: simple_lifecycle_node.py  simple_parameter.py  simple_publisher.py  simple_receiver.py  simple_service_client.py  simple_service_server.py  simple_subscriber.py  simple_tf_euler_to_quaternion.py  simple_tf_kinematic.py  simple_tf_kinematic_dynamic.py  simple_tf_listener.py  simple_transmitter.py
